Fixes index dropdown overflow

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -75,7 +75,6 @@
   padding-top: 10vh;
   text-align: center;
   width: 100%;
-  height: 100vh;
 
   h2 {
     color: #fff;
